# ai_agent

./: .env.example  .gitignore  README.md  _debug_runtime.py  _smoke_refactor.py  _smoke_test.py  _test_agent_e2e.py  _test_fix_agent.py  _verify_events.py  pyproject.toml
data/: conversations.db  conversations.db-shm  conversations.db-wal  debug.db  test_fix.db
data/knowledge/: agent_guide.md
frontend/: index.html
src/ai_agent/: __init__.py  app.py  config.py  dependencies.py  main.py  schemas.py
src/ai_agent/core/: __init__.py  action_dispatcher.py  action_executor.py  agent.py  agent_loop.py  agent_runtime.py  application_profile.py  chat_runtime.py  context_manager.py  context_provider.py  conversation.py  event.py  executor.py  loop.py  memory.py  message_builder.py  observer.py  planner.py  policy.py  prompt.py  provider.py  state.py  stream.py
src/ai_agent/core/handlers/: __init__.py
src/ai_agent/core/knowledge/: file_knowledge_provider.py
src/ai_agent/llm/: __init__.py  base.py  deepseek.py  factory.py
src/ai_agent/models/: __init__.py  action.py  agent.py  chat.py  context.py  runtime.py
src/ai_agent/persistence/: models.py  store.py
src/ai_agent/prompts/: agent_system.txt  answer.txt  prompt_loader.py
src/ai_agent/prompts/agent/: answer.txt
src/ai_agent/prompts/defaults/: system.txt
src/ai_agent/routes/: __init__.py  agent_routes.py  conversation_routes.py
src/ai_agent/skills/: __init__.py  base.py
src/ai_agent/tools/: base.py  calculator.py  datetime_tool.py  local_provider.py  text_stats_tool.py
src/ai_agent/tools/mcp/: adapter.py  (+3 more)
