[project]
name = "ai_agent"
version = "0.1.0"
description = "AI Agent with DeepSeek Streaming Support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
start = "ai_agent.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

# hatchling 自动识别 src/ 目录为包根（src-layout 是默认支持的）
# Python 包在 src/ai_agent/ 下
[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
